[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/fonts/Mantinia Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/MainMenu_back.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="TitleLabel" type="Label" parent="CanvasLayer/Control"]
margin_left = 149.0
margin_top = 140.0
margin_right = 649.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
text = "Hong"
align = 1
uppercase = true

[node name="Player1Button" type="Button" parent="CanvasLayer/Control"]
margin_left = 301.0
margin_top = 340.0
margin_right = 501.0
margin_bottom = 390.0
text = "Player1"

[node name="Player2Button" type="Button" parent="CanvasLayer/Control"]
margin_left = 301.0
margin_top = 420.0
margin_right = 501.0
margin_bottom = 470.0
text = "Player2"

[node name="InstructionsLabel" type="Label" parent="CanvasLayer/Control"]
margin_left = 336.0
margin_top = 296.0
margin_right = 471.0
margin_bottom = 310.0
text = "Find your destination"
align = 1

[node name="ServerStatusLabel" type="Label" parent="CanvasLayer/Control"]
margin_left = 10.0
margin_top = 560.0
margin_right = 610.0
margin_bottom = 590.0
text = "Server: Searching.."

[node name="DiscoverButton" type="Button" parent="CanvasLayer/Control"]
margin_left = 620.0
margin_top = 560.0
margin_right = 790.0
margin_bottom = 590.0
text = "Discover Server"

[node name="MainMenuBack" type="Sprite" parent="."]
position = Vector2( 343, 304 )
scale = Vector2( 0.589844, 0.589844 )
texture = ExtResource( 3 )
